<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.chernikovich.wow_auctionator.presentation.screen.settings.SettingsViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/RegionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/region"
            app:visibility="@{viewModel.regionVisibility}"
            app:layout_constraintBottom_toBottomOf="@+id/regionEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/regionEditText" />

        <TextView
            android:id="@+id/RealmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realm"
            app:visibility="@{viewModel.realmVisibility}"
            app:layout_constraintBottom_toBottomOf="@+id/RegionTextView"
            app:layout_constraintEnd_toEndOf="@+id/RegionTextView"
            app:layout_constraintStart_toStartOf="@+id/RegionTextView"
            app:layout_constraintTop_toTopOf="@+id/RegionTextView" />

        <EditText
            android:id="@+id/regionEditText"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/us_or_eu"
            android:inputType="text"
            app:visibility="@{viewModel.regionVisibility}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/RegionTextView"
            app:layout_constraintTop_toTopOf="parent"/>

        <AutoCompleteTextView
            android:id="@+id/realmAutoComp"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:hint="@string/select_realm"
            android:inputType="text"
            app:visibility="@{viewModel.realmVisibility}"
            app:layout_constraintBottom_toBottomOf="@+id/regionEditText"
            app:layout_constraintEnd_toEndOf="@+id/regionEditText"
            app:layout_constraintStart_toStartOf="@+id/regionEditText"
            app:layout_constraintTop_toTopOf="@+id/regionEditText" />

        <Button
            android:id="@+id/readyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ready"
            app:visibility="@{viewModel.realmVisibility}"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/realmAutoComp" />

        <Button
            android:id="@+id/readyRegionButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/ready"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/readyButton"
            app:layout_constraintEnd_toEndOf="@+id/readyButton"
            app:layout_constraintStart_toStartOf="@+id/readyButton"
            app:layout_constraintTop_toTopOf="@+id/readyButton"
            app:visibility="@{viewModel.regionVisibility}" />

    </android.support.constraint.ConstraintLayout>
</layout>