<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.chernikovich.wow_auctionator.presentation.screen.info.item.ItemInfoViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:visibility="@{!viewModel.isVisibility}" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/infoItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bacground_item"
            app:visibility="@{viewModel.isVisibility}">


            <TextView
                android:id="@+id/historicalPriceServerGold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/gold_mini"
                android:text="@{viewModel.historicalPriceServerGold}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/historicalPrice"
                app:layout_constraintStart_toStartOf="@+id/marketValueServerGold"
                app:layout_constraintTop_toTopOf="@+id/historicalPrice" />

            <TextView
                android:id="@+id/historicalPriceServerSilver"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableEnd="@mipmap/silver"
                android:text="@{viewModel.historicalPriceServerSilver}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/historicalPriceServerGold"
                app:layout_constraintStart_toEndOf="@+id/historicalPriceServerGold"
                app:layout_constraintTop_toTopOf="@+id/historicalPriceServerGold" />

            <TextView
                android:id="@+id/historicalPriceServerCopper"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableEnd="@mipmap/copper"
                android:text="@{viewModel.historicalPriceServerCopper}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/historicalPriceServerSilver"
                app:layout_constraintStart_toEndOf="@+id/historicalPriceServerSilver"
                app:layout_constraintTop_toTopOf="@+id/historicalPriceServerSilver" />

            <TextView
                android:id="@+id/marketValueServerGold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/gold_mini"
                android:text="@{viewModel.marketValueServerGold}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/marketValue"
                app:layout_constraintStart_toStartOf="@+id/minBuyoutServerGold"
                app:layout_constraintTop_toTopOf="@+id/marketValue" />

            <TextView
                android:id="@+id/marketValueServerSilver"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableEnd="@mipmap/silver"
                android:text="@{viewModel.marketValueServerSilver}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/marketValueServerGold"
                app:layout_constraintStart_toEndOf="@+id/marketValueServerGold"
                app:layout_constraintTop_toTopOf="@+id/marketValueServerGold" />

            <TextView
                android:id="@+id/marketValueServerCopper"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableEnd="@mipmap/copper"
                android:text="@{viewModel.marketValueServerCopper}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/marketValueServerSilver"
                app:layout_constraintStart_toEndOf="@+id/marketValueServerSilver"
                app:layout_constraintTop_toTopOf="@+id/marketValueServerSilver" />

            <TextView
                android:id="@+id/minBuyoutServerCopper"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableEnd="@mipmap/copper"
                android:text="@{viewModel.minBuyoutServerCopper}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/minBuyoutServerSilver"
                app:layout_constraintStart_toEndOf="@+id/minBuyoutServerSilver"
                app:layout_constraintTop_toTopOf="@+id/minBuyoutServerSilver" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="64dp"
                android:src="@{viewModel.img}"
                android:textColor="@color/common"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.itemName}"
                android:textColor="@{viewModel.textColor}"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toTopOf="@+id/icon" />

            <TextView
                android:id="@+id/statName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/stat_name"
                android:textColor="@color/common"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/serverName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@{viewModel.serverName}"
                android:textColor="@color/common"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/statName"
                app:layout_constraintTop_toTopOf="@+id/statName"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/minimumBuyout"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/minimum_buyout"
                android:textColor="@color/common"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/statName"
                app:layout_constraintTop_toBottomOf="@+id/statName" />

            <TextView
                android:id="@+id/marketValue"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/market_value"
                android:textColor="@color/common"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/statName"
                app:layout_constraintTop_toBottomOf="@+id/minimumBuyout" />

            <TextView
                android:id="@+id/historicalPrice"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/historical_price"
                android:textColor="@color/common"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/statName"
                app:layout_constraintTop_toBottomOf="@+id/marketValue" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/quantity"
                android:textColor="@color/common"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/serverName"
                app:layout_constraintStart_toStartOf="@+id/statName"
                app:layout_constraintTop_toBottomOf="@+id/historicalPrice" />

            <TextView
                android:id="@+id/minBuyoutServerSilver"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableEnd="@mipmap/silver"
                android:text="@{viewModel.minBuyoutServerSilver}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/minBuyoutServerGold"
                app:layout_constraintStart_toEndOf="@+id/minBuyoutServerGold"
                app:layout_constraintTop_toTopOf="@+id/minBuyoutServerGold" />

            <TextView
                android:id="@+id/minBuyoutServerGold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:drawableEnd="@mipmap/gold_mini"
                android:text="@{viewModel.minBuyoutServerGold}"
                android:textColor="@color/common"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/minimumBuyout"
                app:layout_constraintStart_toEndOf="@+id/minimumBuyout"
                app:layout_constraintTop_toTopOf="@+id/minimumBuyout" />

            <TextView
                android:id="@+id/quantityServer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{viewModel.quantityServer}"
                android:textColor="@color/common"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/serverName"
                app:layout_constraintStart_toStartOf="@+id/serverName"
                app:layout_constraintTop_toTopOf="@+id/quantity" />

            <Button
                android:id="@+id/addToGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/wow_button"
                android:fontFamily="@font/arial_narrow"
                android:onClick="@{viewModel::addItem}"
                android:text="@string/saveInMyGroup"
                android:textAllCaps="false"
                android:textColor="@color/common"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantityServer" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>